# OneFormer

./: GETTING_STARTED.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  train_net.py
datasets/: fg_ids.py  panoptic2detection_coco_format.py
datasets/custom_datasets/: instance_coco_custom_dataset_mapper.py  semantic_oneformer_custom_dataset_mapper.py
demo/: demo.py  predictor.py  visualizer.py
oneformer/: __init__.py  config.py  datasetmapper_tta.py  oneformer_model.py  test_time_augmentation.py
oneformer/colab/: oneformer_colab.ipynb
oneformer/data/: build.py  tokenizer.py
oneformer/data/dataset_mappers/: coco_unified_new_baseline_dataset_mapper.py  dataset_mapper.py  oneformer_unified_dataset_mapper.py
oneformer/data/datasets/: register_ade20k_instance.py  register_ade20k_panoptic.py  register_cityscapes_panoptic.py  register_coco_panoptic2instance.py  register_coco_panoptic_annos_semseg.py
oneformer/datasets/custom_datasets/: instance_oneformer_custom_dataset_mapper.py
oneformer/demo/: colormap.py  defaults.py  demo.py  predictor.py  visualizer.py
oneformer/evaluation/: cityscapes_evaluation.py  coco_evaluator.py  detection_coco_evaluator.py  evaluator.py  instance_evaluation.py
oneformer/modeling/: criterion.py  matcher.py
oneformer/modeling/backbone/: convnext.py  dinat.py  swin.py
oneformer/tools/: analyze_model.py  calc_throughput.py
oneformer/utils/: box_ops.py  events.py  misc.py  pos_embed.py
tools/: analyze_model.py  calc_throughput.py  setup_detectron2.py
tools/trainers/: trainer_base.py
(+11 files in other folders)
